--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,27 @@
 .navigation {
   width: 100%;
-  background: rgb(91, 91, 94);
+  background: rgb(250, 250, 250);
   padding: 10px;
+  text-align: left;
+  margin-bottom: 1%;
 }
 .link-nav {
-  background: rgb(91, 91, 94);
+  background: rgb(250, 250, 250);
   margin: 2px;
+  margin-left: 2%;
   padding: 8px;
   text-decoration: none;
-  color: rgb(255, 255, 255);
-  letter-spacing: 3px;
+  color: #252525;
+  letter-spacing: 2px;
   font-size: 15px;
   cursor: pointer;
+  font-weight: bold;
 }
 .link-nav:hover {
   color: rgb(3, 3, 3);
+  background: rgb(172, 171, 171);
+}
+.logo-name{
+  width: 60px;
+  height: 40px;
 }
