--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,20 @@
   color: rgb(3, 3, 3);
   background: rgb(172, 171, 171);
 }
-.logo-name{
+.logo-name {
   width: 60px;
   height: 40px;
+}
+.listProducts {
+  width: 45%;
+  height: 15%;
+}
+.products {
+  border: rgb(172, 171, 171) solid 1px;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px;
+}
+a {
+  text-decoration: none;
 }
