--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-.navigation {
+/* .navigation {
   width: 100%;
-  background: rgb(250, 250, 250);
+  background: rgb(172, 171, 171);
   padding: 10px;
   text-align: left;
-  margin-bottom: 1%;
+  margin-bottom: 2%;
 }
 .link-nav {
-  background: rgb(250, 250, 250);
-  margin: 2px;
+  background: rgb(172, 171, 171);
+  margin: 0px 2px;
   margin-left: 2%;
   padding: 8px;
   text-decoration: none;
@@ -19,7 +19,8 @@
 }
 .link-nav:hover {
   color: rgb(3, 3, 3);
-  background: rgb(172, 171, 171);
+  background: rgb(250, 250, 250);
+  border-radius: 4px;
 }
 .logo-name {
   width: 60px;
@@ -38,3 +39,25 @@
 a {
   text-decoration: none;
 }
+.form-detail{
+  margin: 5% 10%;
+  align-items: center;
+  width: 50%;
+  height: 50%;
+}
+.btn-submit{
+  margin-top: 5px;
+  width: 90px;
+  height: 40px;
+  background: rgb(172, 171, 171);
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 18px;
+}
+.copyright{
+  margin-top: 5%;
+  text-align: center;
+  font-weight: bold;
+  background: rgb(172, 171, 171);
+} */
