--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,13 @@
   margin: 10px;
   padding: 20px;
 }
-.form-detail{
+.form-detail {
   margin: 5% 10%;
   align-items: center;
   width: 50%;
   height: 50%;
 }
-.btn-submit{
+.btn-submit {
   margin-top: 5px;
   width: 90px;
   height: 40px;
@@ -24,9 +24,11 @@
   font-weight: bold;
   font-size: 18px;
 }
-.copyright{
-  margin-top: 5%;
+.copyright {
+  bottom: 0;
+  background-color: rgb(27, 23, 23);
+  width: 100%;
+  color: rgb(172, 171, 171);
   text-align: center;
-  font-weight: bold;
-  background: rgb(172, 171, 171);
-} 
+  padding: 10px;
+}
