--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap');
+@import "~react-image-gallery/styles/css/image-gallery.css";
 *{
   font-family: 'Mulish', sans-serif;
   color: #252525;
