--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,7 @@ i {
   letter-spacing: 3px;
   font-size: 25px;
   color: rgb(13, 156, 8);
+  padding: 10px;
 }
 .currency-price-detail {
   text-align: center;
@@ -161,4 +162,57 @@ i {
   align-items: center;
   font-size: 18px;
   font-weight: bold;
+}
+.expire-at {
+  text-align: center;
+  font-weight: 900;
+  font-size: 25px;
+  color: rgb(247, 0, 0);
+  padding: 5px;
+  letter-spacing: 1px;
+  animation-name: parpadeo;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: parpadeo;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+@-moz-keyframes parpadeo {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes parpadeo {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes parpadeo {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
